all implementation of Posts by adding an image